--- a/webapp/view/CatalogDialog.fragment.xml
+++ b/webapp/view/CatalogDialog.fragment.xml
@@ -2,10 +2,10 @@
 	xmlns="sap.m" 
 	xmlns:core="sap.ui.core" >
    <Dialog
-      title="Bem Vindo !">
+      title="Confira o Catálogo">
       <content>
          <Image
-        	src="/webapp/Image/redentora.png"
+        	src="/webapp/Image/Foto_Samuel_2.png"
         	width="100%"
         	height="100%">
         </Image>
