--- a/webapp/view/CompanyMain.view.xml
+++ b/webapp/view/CompanyMain.view.xml
@@ -1,21 +1,46 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="OFFMarketStartupWeekend.controller.CompanyMain"
+<mvc:View 
+	xmlns:core="sap.ui.core"	
+	xmlns:mvc="sap.ui.core.mvc" 
+	xmlns="sap.m" 
+	controllerName="OFFMarketStartupWeekend.controller.CompanyMain"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 	<App>
 		<pages>
 			<Page title="{i18n>CompanyMainText}"
-		    	showNavButton="true"
+		        showNavButton="true"
 		        navButtonPress="handleNavButtonPress">
 				<content>
-				    
+				    <List id="SectorList" mode="None" items="{Tasks>/taskList}" >
+                        <headerToolbar>
+					      	<Toolbar>
+					      		<Title text="Categoria"/>
+					      	</Toolbar>
+					      </headerToolbar>
+                        <StandardListItem xmlns="sap.m"
+                            id="id"
+                            type="Active"
+                            visible="true"
+                            press="handleListItemPress"
+                            selected= "handleListItemPress"
+                            title="{Tasks>sectorName}"
+                            icon="sap-icon://basket"
+                            />
+                        </List>
 				</content>
 				<footer>
 				    <OverflowToolbar>
 				        <ToolbarSpacer/>
+				        <OverflowToolbarButton
+				        	id="addButton"
+				        	text="Flag"
+				        	icon="sap-icon://add"
+				        	press="onAddButtonPress"
+				        	active="false"/>
 				        <Image
             		    	visible="true"
             		    	width="80px"
             		    	height="40px"
-            		    	src="/webapp/Image/Image1.jpg"/>
+            		    	src="/webapp/Image/logo_pequeno_transp.png"/>
 				    </OverflowToolbar>
         		</footer>
 			</Page>
