--- a/webapp/view/ProductList.view.xml
+++ b/webapp/view/ProductList.view.xml
@@ -1,41 +1,42 @@
 <mvc:View 
 	xmlns:core="sap.ui.core" 
 	xmlns:mvc="sap.ui.core.mvc" 
-	xmlns="sap.m"
-	controllerName="OFFMarketStartupWeekend.controller.CustomerMain" 
+	xmlns="sap.m" 
+	controllerName="OFFMarketStartupWeekend.controller.ProductList"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 	<App>
 		<pages>
-			<Page title="{i18n>CustomerMainText}"
+			<Page title="{i18n>ProductListText}"
 		        showNavButton="true"
 		        navButtonPress="handleNavButtonPress">
 				<content>
-				    <List id="SectorList" mode="None" items="{Tasks>/taskList}" >
-				    	<headerToolbar>
+				    <List id="ProductList" mode="None" items="{Tasks>/taskList}" updateStarted="true">
+                        <headerToolbar>
 					      	<Toolbar>
-					      		<Title text="Categoria"/>
+					      		<Title text="{i18n>productListTitle}"/>
+					      		<ToolbarSpacer/>
+					      		<SearchField width="50%" liveChange="onFilterInvoices" selectOnFocus="false" />
 					      	</Toolbar>
 					      </headerToolbar>
+					      <items>
                         <StandardListItem xmlns="sap.m"
                             id="id"
                             type="Active"
                             visible="true"
                             press="handleListItemPress"
+                            info="De:   3.49 BRL            Por:  {Tasks>value} BRL"
+                            infoState="Success"
                             selected= "handleListItemPress"
-                            title="{Tasks>sectorName}"
-                            icon="sap-icon://basket"
+                            title="{Tasks>productName}"
+                            description="{Tasks>description}"
+                            icon="sap-icon://product"
                             />
-                        </List>
+						</items>
+                    </List>
 				</content>
 				<footer>
 				    <OverflowToolbar>
 				        <ToolbarSpacer/>
-				        <OverflowToolbarButton
-				        	id="flagButton"
-				        	text="Flag"
-				        	icon="sap-icon://list"
-				        	press="onListButtonPress"
-				        	active="false"/>
 				        <Image
             		    	visible="true"
             		    	width="80px"
