--- a/webapp/view/main.view.xml
+++ b/webapp/view/main.view.xml
@@ -1,4 +1,7 @@
-<mvc:View controllerName="OFFMarketStartupWeekend.controller.main" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc"
+<mvc:View 
+	controllerName="OFFMarketStartupWeekend.controller.main" 
+	xmlns:html="http://www.w3.org/1999/xhtml" 
+	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m">
 	<App>
 		<pages>
